--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "docuwaretask",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.3.3",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "bcrypt": "^5.1.0",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
-    "prisma": "^4.16.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "jsonwebtoken": "^9.0.0"
-  }
+   "name": "docuwaretask",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "test": "jest --watch"
+   },
+   "dependencies": {
+      "@prisma/client": "^4.16.2",
+      "@types/node": "20.3.3",
+      "@types/react": "18.2.14",
+      "@types/react-dom": "18.2.6",
+      "bcrypt": "^5.1.0",
+      "eslint": "8.44.0",
+      "eslint-config-next": "13.4.7",
+      "next": "13.4.7",
+      "prisma": "^4.16.2",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "typescript": "5.1.6"
+   },
+   "devDependencies": {
+      "@testing-library/jest-dom": "^5.16.5",
+      "@testing-library/react": "^14.0.0",
+      "@types/bcrypt": "^5.0.0",
+      "@types/jsonwebtoken": "^9.0.2",
+      "jest": "^29.5.0",
+      "jest-environment-jsdom": "^29.5.0",
+      "jsonwebtoken": "^9.0.0"
+   }
 }
